# usb-trigger

./: Cargo.toml
src/: main.rs  usb_event.rs
src/watcher/: linux.rs  mod.rs
