[package]
name = "usb-trigger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.x86_64-unknown-linux-gnu.dependencies]
mio = { version = "0.8.6", features = ["os-poll"] }
udev = { version = "0.7.0", features = ["mio08"] }
